--- a/conf/.env
+++ b/conf/.env
@@ -1,6 +1,6 @@
 # General Configuration
 
-DATABASE_URL=
+DATABASE_URL=postgresql://__DB_USER__:__DB_PWD__@localhost:5432/__DB_NAME__
 SECRET_KEY_BASE=__KEY__
 FORCE_SSL=false
 HOST=__DOAMIN__
