--- a/conf/.env
+++ b/conf/.env
@@ -12,7 +12,7 @@ SMTP_ADDRESS=localhost
 SMTP_PORT=25
 SMTP_DOMAIN=__DOMAIN__
 SMTP_PASSWORD=__MAIL_PWD__
-SMTP_AUTHENTICATION - The authentication method for the SMTP server (plain or login).
+SMTP_AUTHENTICATION=plain
 
 # AWS S3 Configuration
 
